--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -12,3 +12,7 @@
     font-family: IBMPlexSans, Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
 }
+
+body {
+    background: hsl(200, 4%, 83%);
+}
